Switch to two-mode metadata store